--- a/src/MyMediaLite/MyMediaLite.csproj
+++ b/src/MyMediaLite/MyMediaLite.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>MyMediaLite</RootNamespace>
     <AssemblyName>MyMediaLite</AssemblyName>
-    <ReleaseVersion>3.07</ReleaseVersion>
+    <ReleaseVersion>3.06</ReleaseVersion>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -248,6 +248,9 @@
     <Compile Include="RatingPrediction\DemoUserBaseline.cs" />
     <Compile Include="RatingPrediction\DemoUserItemAtt.cs" />
     <Compile Include="RatingPrediction\DemoGSVDPlusPlus.cs" />
+    <Compile Include="RatingPrediction\DemoSVD.cs" />
+    <Compile Include="RatingPrediction\DemoMFUserItemAtt.cs" />
+    <Compile Include="RatingPrediction\DemoSVDPlusPlus.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)/Microsoft.CSharp.targets" />
   <ItemGroup>
